--- a/requirements.txt
+++ b/requirements.txt
@@ -1,148 +1,22 @@
-﻿aiodns==2.0.0
-aiosmtpd==1.2.2
-alabaster==0.7.12
-atomicwrites==1.3.0
-atpublic==2.1.1
-attrs==19.2.0
-Babel==2.7.0
-backcall==0.1.0
-backports.functools-lru-cache==1.5
-backports.os==0.1.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-beautifulsoup4==4.8.0
-bitarray==1.0.1
-bkcharts==0.2
-bleach==3.1.0
-bokeh==1.3.4
-boto==2.49.0
-Bottleneck==1.2.1
-certifi==2019.9.11
-cffi==1.12.3
+autopep8==1.4.4
+certifi==2019.3.9
 chardet==3.0.4
-Click==7.0
-cloudpickle==1.2.2
-colorama==0.4.1
-comtypes==1.1.7
-contextlib2==0.6.0
-cryptography==2.7
-cycler==0.10.0
-Cython==0.29.13
-cytoolz==0.10.0
-dask==2.5.2
-decorator==4.4.0
 defusedxml==0.6.0
-diff-match-patch==20181111
-distributed==2.5.2
-Django==3.1.4
-django-ckeditor==6.0.0
-django-cleanup==5.1.0
-django-crispy-forms==1.11.0
-django-filter==2.4.0
-django-js-asset==1.2.2
-django-mathfilters==1.0.0
-django-phone-field==1.8.1
-django-phonenumber-field==5.0.0
-django-ranged-response==0.2.0
-django-recaptcha==2.0.6
-django-simple-captcha==0.5.13
-dnspython==2.0.0
-docutils==0.15.2
-email-validator==1.1.1
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-Flask==1.1.2
-Flask-MySQLdb==0.2.0
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-fsspec==0.5.2
-future==0.17.1
-gevent==1.4.0
-glob2==0.7
-googletrans==3.0.0
-greenlet==0.4.15
-h11==0.9.0
-h2==3.2.0
-h5py==2.9.0
-HeapDict==1.0.1
-helpdev==0.7.1
-hpack==3.0.0
-hstspreload==2020.11.21
-html5lib==1.0.1
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
+Django==2.2.14
+django-allauth==0.39.1
+django-countries==5.3.3
+django-crispy-forms==1.7.2
+django-debug-toolbar==1.10.1
 idna==2.8
-imageio==2.6.0
-imagesize==1.1.0
-importlib-metadata==0.23
-intervaltree==3.0.2
-ipykernel==5.1.2
-ipython==7.8.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.15.1
-Jinja2==2.10.3
-joblib==0.13.2
-json5==0.8.5
-jsonschema==3.0.2
-jupyter==1.0.0
-jupyter-client==5.3.3
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-jupyterlab==1.1.4
-jupyterlab-server==1.0.6
-keyring==18.0.0
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
-libarchive-c==2.8
-llvmlite==0.29.0
-locket==0.2.0
-lxml==4.4.1
-MarkupSafe==1.1.1
-matplotlib==3.1.1
-notebook==6.0.1
-numba==0.45.1
-numexpr==2.7.0
-numpy==1.16.5
-numpydoc==0.9.1
-parso==0.5.1
-partd==1.0.0
-passlib==1.7.4
-path.py==12.0.1
-pathlib2==2.3.5
-patsy==0.5.1
+oauthlib==3.0.1
 pep8==1.7.1
-phonenumbers==8.12.20
-pickleshare==0.7.5
-Pillow==6.2.0
-pkginfo==1.5.0.1
-pluggy==0.13.0
-ply==3.11
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-psutil==5.6.3
-py==1.8.0
-PyYAML==5.1.2
-pyzmq==18.1.0
-QDarkStyle==2.8.1
-QtAwesome==0.6.0
-qtconsole==4.5.5
-QtPy==1.9.0
-requests==2.22.0
-rfc3986==1.4.0
-spyder==3.3.6
-spyder-kernels==0.5.2
-SQLAlchemy==1.3.9
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.11.2
-WTForms==2.3.3
-xlrd==1.2.0
-zipp==0.6.0
+Pillow==6.2.2
+pycodestyle==2.5.0
+python-decouple==3.1
+python3-openid==3.1.0
+pytz==2018.5
+requests==2.21.0
+requests-oauthlib==1.2.0
+sqlparse==0.2.4
+stripe==2.27.0
+urllib3==1.24.2
