--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.3.9
 chardet==3.0.4
 defusedxml==0.6.0
 Django==2.2.14
+django_cleanup==5.2.0
 django-allauth==0.39.1
 django-countries==5.3.3
 django-crispy-forms==1.7.2
