--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ defusedxml==0.6.0
 Django==2.2.14
 django_cleanup==5.2.0
 django-allauth==0.39.1
+django_filters==3.1
 django-countries==5.3.3
 django-crispy-forms==1.7.2
 django-debug-toolbar==1.10.1
