--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,33 @@
-autopep8==1.4.4
-certifi==2019.3.9
-chardet==3.0.4
-defusedxml==0.6.0
-Django==2.2.14
-django_cleanup==5.2.0
-django-allauth==0.39.1
-django_filter==2.4.0
-django-countries==5.3.3
-django-crispy-forms==1.7.2
-django-debug-toolbar==1.10.1
-idna==2.8
-oauthlib==3.0.1
-pep8==1.7.1
-Pillow==6.2.2
-pycodestyle==2.5.0
-python-decouple==3.1
-python3-openid==3.1.0
-pytz==2018.5
-requests==2.21.0
-requests-oauthlib==1.2.0
-sqlparse==0.2.4
-stripe==2.27.0
-urllib3==1.24.2
+Babel==2.7.0
+dj-database-url==0.5.0
+Django==3.1.4
+django-ckeditor==6.0.0
+django-cleanup==5.1.0
+django-crispy-forms==1.11.0
+django-filter==2.4.0
+django-heroku==0.3.1
+django-js-asset==1.2.2
+django-mathfilters==1.0.0
+django-phone-field==1.8.1
+django-phonenumber-field==5.0.0
+django-ranged-response==0.2.0
+django-recaptcha==2.0.6
+django-simple-captcha==0.5.13
+email-validator==1.1.1
+gunicorn==20.1.0
+imagesize==1.1.0
+Jinja2==2.10.3
+json5==0.8.5
+locket==0.2.0
+validate-email==1.3
+verify-email==2.4.1
+virtualenv==20.6.0
+WTForms==2.3.3
+whitenoise==5.0.1
+sqlparse==0.3.0
+pytz==2019.3
+python-decouple==3.3 
+asgiref==3.2.3 
+psycopg2==2.8.4
+phonenumberslite==8.12.11
+django-phonenumber-field[phonenumberslite]==5.0.0
